add ignite config