@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.0</version>
+		<version>2.7.0</version>
 	</parent>
 	<groupId>com.ek</groupId>
 	<artifactId>flexignite</artifactId>
@@ -19,7 +19,7 @@
 	</modules>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 
 
@@ -31,13 +31,56 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.12.1</version>
 					<configuration>
-						<source>17</source>
-						<target>17</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.springframework.boot</groupId>
 					<artifactId>spring-boot-maven-plugin</artifactId>
+					<configuration>
+						<jvmArguments>
+							--add-opens=java.base/jdk.internal.access=ALL-UNNAMED
+							--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+							--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+							--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+							--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+							--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+							--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+							--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+							--add-opens=java.base/java.io=ALL-UNNAMED
+							--add-opens=java.base/java.nio=ALL-UNNAMED
+							--add-opens=java.base/java.net=ALL-UNNAMED
+							--add-opens=java.base/java.util=ALL-UNNAMED
+							--add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+							--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+							--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+							--add-opens=java.base/java.lang=ALL-UNNAMED
+							--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+							--add-opens=java.base/java.math=ALL-UNNAMED
+							--add-opens=java.sql/java.sql=ALL-UNNAMED
+							--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+							--add-opens=java.base/java.time=ALL-UNNAMED
+							--add-opens=java.base/java.text=ALL-UNNAMED
+							--add-opens=java.management/sun.management=ALL-UNNAMED
+							--add-opens=java.desktop/java.awt.font=ALL-UNNAMED
+						</jvmArguments>
+					</configuration>
+				</plugin>
+				<plugin>
+					<!-- Build an executable JAR -->
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>3.1.0</version>
+					<configuration>
+						<archive>
+							<manifest>
+								<addClasspath>true</addClasspath>
+								<classpathPrefix>lib/</classpathPrefix>
+								<mainClass>com.mypackage.MyClass</mainClass>
+							</manifest>
+						</archive>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
